openapi specs fixed
